Closed
Bug 1178858
Opened 10 years ago
Closed 10 years ago
Video would not playback after seek seekbar first if media.autoplay.enabled = false
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla42
People
(Reporter: alice0775, Assigned: rbarker)
References
Details
(Keywords: regression)
Attachments
(1 file)
+++ This bug was initially created as a clone of Bug #1173844 +++
See Bug #1173848 Comment 2
It's even worse if you decide to seek first. Then the button will be stuck showing pause and clicking it arbitrary times won't have any effect whatsoever. Playback only starts if you change resolutions in the player. I think it's a serious breakage.
Steps To Reproduce:
1. Make sure media.autoplay.enabled = false in about:config
2. Open any video
(e.g. http://www.youtube.com/watch?v=BH0BNbwqNK8 )
3. Seek seekbar first
4. Attempt to play back
Actual Results:
Not start
Expected Results:
Video should playback properly
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=3ba889bb0741&tochange=e637319144d3
Suspect : Bug 659285
Updated•10 years ago
|
Flags: needinfo?(rbarker)
Updated•10 years ago
|
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → rbarker
Flags: needinfo?(rbarker)
| Assignee | ||
Comment 1•10 years ago
|
||
| Assignee | ||
Comment 2•10 years ago
|
||
Comment on attachment 8638825 [details] [diff] [review]
0001-Bug-1178858-Video-would-not-playback-after-seek-seekbar-first-if-media.autoplay.enabled-false-15072415-279994a.patch
This patch tries to detect when the user interacts with the scrubber so that the script can start playing when the video is ready. I removed the previous play detection since it seemed redundant.
Attachment #8638825 -
Flags: review?(cpearce)
| Assignee | ||
Comment 3•10 years ago
|
||
Will need to be uplifted to 41.
Updated•10 years ago
|
Attachment #8638825 -
Flags: review?(cpearce) → review+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 5•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Keywords: checkin-needed
Comment 7•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Randall, do you want to request uplift of this patch to Aurora? Given that this has been in m-c for a few day I am assuming it must be a safe patch. What do you think?
Flags: needinfo?(rbarker)
| Assignee | ||
Comment 9•10 years ago
|
||
Comment on attachment 8638825 [details] [diff] [review]
0001-Bug-1178858-Video-would-not-playback-after-seek-seekbar-first-if-media.autoplay.enabled-false-15072415-279994a.patch
Approval Request Comment
[Feature/regressing bug #]: Broke seek bar when pref media.autoplay.enabled was set to false.
[User impact if declined]: Seek bar will not work on sites like youtube when pref is set to false.
[Describe test coverage new/current, TreeHerder]: There are not tests for this pref
[Risks and why]: On desktop, this pref is only accessible via about:config. There is a check box on fennec.
[String/UUID change made/needed]: None
Flags: needinfo?(rbarker)
Attachment #8638825 -
Flags: approval-mozilla-aurora?
Comment 10•10 years ago
|
||
Comment on attachment 8638825 [details] [diff] [review]
0001-Bug-1178858-Video-would-not-playback-after-seek-seekbar-first-if-media.autoplay.enabled-false-15072415-279994a.patch
Let's uplift to Aurora given that this has been in m-c for a few days.
Attachment #8638825 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•10 years ago
|
||
Alice, could you please verify this issue is fixed on a 07/28 or later Nightly build? Thanks!
Flags: needinfo?(alice0775)
| Reporter | ||
Comment 12•10 years ago
|
||
I cannot reproduce the problem on latest Nightly42.0a1.
https://hg.mozilla.org/mozilla-central/rev/f3b757156f69
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:42.0) Gecko/20100101 Firefox/42.0 ID:20150805030208
Flags: needinfo?(alice0775)
Comment 14•10 years ago
|
||
Flags: needinfo?(rbarker)
Updated•10 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•