Bug 1178858 - Video would not playback after seek seekbar first if media.autoplay.enabled = false. r=cpearce

When autoplay is disabled, the media element was not detecting user
initiated seeking so when a script attempted to play after seeking,
playing would be blocked.